--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
     <meta charset="utf-8">
     <title>Hundeschule 421</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet"> 
 </head>
 <body>
     <header>
