--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <div class="MainTitle">
+            <img src="Images/Logo_final.png" id="Logo">
             <h1 id="MainTile">Hundeschule 421</title>
         </div>
         <div class="Navigation">
