--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
 <body>
     <header>
         <div class="MainTitle">
-            <img src="Images/Logo_final.png" id="Logo">
+            <table class="MainTitle">
+                <col style="width:20%">
+                <col style="width: 80%">
+                <tr id="Logodiv"><td><img src="Images/Logo_borderless.png" id="Logo"></td><td><div class="Navigation">
+                    <ul class="Navigation">
+                        <li id="NavItem">Startseite</li>
+                        <li id="NavItem">Qualifikationen</li>
+                        <li id="NavItem">Kontakt</li>
+                        <li id="NavItem">Datenschutz</li>
+                        <li id="NavItem">AGB</li>
+                    </ul>
+                </div></td></tr>
+            </table> 
         </div>
-        <div class="Navigation">
-            
-            <ul class="Navigation">
-                <li id="NavItem">Startseite</li>
-                <li id="NavItem">Qualifikationen</li>
-                <li id="NavItem">Kontakt</li>
-                <li id="NavItem">Datenschutz</li>
-                <li id="NavItem">AGB</li>
-            </ul>
-        </div>
+
     </header>
 </body>
