resolved style and scaling issues

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
                 <col style="width: 80%">
                 <tr id="Logodiv"><td><img src="Images/Logo_borderless.png" id="Logo"></td><td><div class="Navigation">
                     <ul class="Navigation">
-                        <li id="NavItem">Startseite</li>
-                        <li id="NavItem">Qualifikationen</li>
-                        <li id="NavItem">Kontakt</li>
-                        <li id="NavItem">Datenschutz</li>
                         <li id="NavItem">AGB</li>
+                        <li id="NavItem">Datenschutz</li>
+                        <li id="NavItem">Kontakt</li>
+                        <li id="NavItem">Qualifikationen</li>
+                        <li id="NavItem">Home</li>
                     </ul>
                 </div>
             
@@ -28,8 +28,8 @@
                     <a href="#home" class="active">Home</a>
                     <!-- Navigation links (hidden by default) -->
                     <div id="myLinks">
-                    <a href="#news">News</a>
-                    <a href="#contact">Contact</a>
+                    <a href="">News</a>
+                    <a href="">Contact</a>
                     <a href="#about">About</a>
                     </div>
                     <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
