--- a/index.html
+++ b/index.html
@@ -23,16 +23,14 @@
                     </ul>
                 </div>
             
-                <!-- Top Navigation Menu -->
                 <div class="topnav">
                     <a href="#home" class="active">Home</a>
-                    <!-- Navigation links (hidden by default) -->
                     <div id="myLinks">
-                    <a href="">News</a>
-                    <a href="">Contact</a>
-                    <a href="#about">About</a>
+                    <a href="">Qualifikationen</a>
+                    <a href="">Kontakt</a>
+                    <a href="">Datenschutz</a>
+                    <a href="">AGB</a>
                     </div>
-                    <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                     <i class="fa fa-bars"></i>
                     </a>
