First content Display added

--- a/index.html
+++ b/index.html
@@ -50,4 +50,19 @@
         </div>
 
     </header>
+
+    <body>
+        <div class="Content">
+            <table class="ContentTable">
+                <tr>
+                    <td><div class="Beitrag">
+                        <img src="Images/Titel1_final.jpg" style="width: 40%; display: inline;">
+                    </div></td>
+                    <td><div class="Beitrag"><img src="Images/Titel1_final.jpg" style="width: 40%; display: inline;"></div></td>
+                    <td><div class="Beitrag"><img src="Images/Titel1_final.jpg" style="width: 40%; display: inline;"></div></td>
+                </tr>
+                
+            </table>
+        </div>
+    </body>
 </body>
