first Text to picture

--- a/index.html
+++ b/index.html
@@ -56,10 +56,15 @@
             <table class="ContentTable">
                 <tr>
                     <td><div class="Beitrag">
-                        <img src="Images/Titel1_final.jpg" style="width: 40%; display: inline;">
+                            <div class="Beitragsbild"><img id="Beitrag" src="Images/Titel1_final.jpg" ></div>
+                            <div class="Beitragstext"><h3 id="Beitragstitel"></h3><h3>Hundetraining Fair und  Empatisch</h3></div>
                     </div></td>
-                    <td><div class="Beitrag"><img src="Images/Titel1_final.jpg" style="width: 40%; display: inline;"></div></td>
-                    <td><div class="Beitrag"><img src="Images/Titel1_final.jpg" style="width: 40%; display: inline;"></div></td>
+                    <td><div class="Beitrag">
+                        <img  id="Beitrag" src="Images/Titel2_final.jpg" >
+                    </div></td>
+                    <td><div class="Beitrag">
+                        <img id="Beitrag" src="Images/Titel1_final.jpg" > 
+                    </div></td>
                 </tr>
                 
             </table>
