changed scaling of content

--- a/index.html
+++ b/index.html
@@ -57,14 +57,16 @@
                 <tr>
                     <td><div class="Beitrag">
                             <div class="Beitragsbild"><img id="Beitrag" src="Images/Titel1_final.jpg" ></div>
-                            <div class="Beitragstext"><h3 id="Beitragstitel"></h3><h3>Hundetraining Fair und  Empatisch</h3></div>
+                            <div class="Beitragstext"><h3 id="Beitragstitel">Hundetraining fair und empathisch</h3></div>
                     </div></td>
                     <td><div class="Beitrag">
-                        <img  id="Beitrag" src="Images/Titel2_final.jpg" >
+                        <div class="Beitragsbild"><img id="Beitrag" src="Images/Titel1_final.jpg" ></div>
+                        <div class="Beitragstext"><h3 id="Beitragstitel">Hundetraining fair und empathisch</h3></div>
                     </div></td>
                     <td><div class="Beitrag">
-                        <img id="Beitrag" src="Images/Titel1_final.jpg" > 
-                    </div></td>
+                        <div class="Beitragsbild"><img id="Beitrag" src="Images/Titel1_final.jpg" ></div>
+                        <div class="Beitragstext"><h3 id="Beitragstitel">Hundetraining fair und empathisch</h3></div>
+                </div></td>
                 </tr>
                 
             </table>
