make div clickable

--- a/index.html
+++ b/index.html
@@ -55,18 +55,18 @@
         <div class="Content">
             <table class="ContentTable">
                 <tr>
-                    <td><div class="Beitrag">
+                    <td><a href="#" class="divbutton"><div class="Beitrag">
                             <div class="Beitragsbild"><img id="Beitrag" src="Images/Titel1_final.jpg" ></div>
                             <div class="Beitragstext"><h3 id="Beitragstitel">Hundetraining fair und empathisch</h3></div>
-                    </div></td>
-                    <td><div class="Beitrag">
+                    </div></a></td>
+                    <td><a href="#" class="divbutton"><div class="Beitrag">
                         <div class="Beitragsbild"><img id="Beitrag" src="Images/Titel1_final.jpg" ></div>
                         <div class="Beitragstext"><h3 id="Beitragstitel">Hundetraining fair und empathisch</h3></div>
-                    </div></td>
-                    <td><div class="Beitrag">
+                    </div></a></td>
+                    <td><a href="#" class="divbutton"><div class="Beitrag">
                         <div class="Beitragsbild"><img id="Beitrag" src="Images/Titel1_final.jpg" ></div>
                         <div class="Beitragstext"><h3 id="Beitragstitel">Hundetraining fair und empathisch</h3></div>
-                </div></td>
+                </div></a></td>
                 </tr>
                 
             </table>
