inserted grid layout

--- a/index.html
+++ b/index.html
@@ -48,6 +48,19 @@
 
     <body>
         <div class="Content">
+            <div class="Beitragselement" onclick="showPopup1('popup1')">
+                <img id="Beitrag" src="Images/Titel1_final.jpg" >
+                <h3 id="Beitragstitel">Hundetraining fair und empathisch</h3>
+            </div>
+            <div class="Beitragselement" onclick="showPopup1()">
+                <img id="Beitrag" src="Images/Titel3_final.png" >
+                <h3 id="Beitragstitel">Wer bin ich?</h3>
+            </div>
+            <div class="Beitragselement" onclick="showPopup1()">
+                <img id="Beitrag" src="Images/Titel3_final.png" >
+                <h3 id="Beitragstitel">Wer bin ich?</h3>
+            </div>
+            <!--
             <table class="ContentTable">
                 <tr>
                     <td><div class="Beitrag" onclick="showPopup1()">
@@ -78,7 +91,7 @@
                 </div></td>
                 </tr>             
             </table>
-
+            -->
 
             <div class="popup1" id="popup1">
                 <div class="popupHeader">
