restliche Beiträche hinzugefügt, scaling on mobile changed

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                 <img id="Beitrag" src="Images/Titel3_final.png" >
                 <h3 id="Beitragstitel">Wer bin ich?</h3>
             </div>
-            <div class="Beitragselement" onclick="showPopup1('popup1')">
-                <img id="Beitrag" src="Images/Titel3_final.png" >
-                <h3 id="Beitragstitel">Wer bin ich?</h3>
+            <div class="Beitragselement" onclick="showPopup1('popup3')">
+                <img id="Beitrag" src="Images/Titel4_final.png" >
+                <h3 id="Beitragstitel">Wie entstand der Name meiner Hundeschule?</h3>
             </div>
  
 
@@ -87,7 +87,6 @@
                     </div>
                 </div>
             </div>
-            <div  id="overlay" onclick="hidePopup1()"></div>
 
         </div>
         <div class="popup1" id="popup2">
@@ -111,6 +110,21 @@
                 </div>
             </div>
         </div>
+
+        <div class="popup1" id="popup3" style="top: 30%;">
+            <div class="popupHeader">
+                <div class="title">Wie entstand der Name meiner Hundeschule?</div>
+                <button class="closebutton" onclick="removePopup1()">&times;</button>
+            </div>
+            <div class="popupBody">
+                <div class="item popupText">
+                    <p>
+                        Nach vielen Ideen, die ebenso oft wieder verworfen wurden, habe ich mich gefragt, was genau ich mit meiner Hundeschule erreichen will. Ich möchte Hunde und ihre Menschen zusammen auf einen gemeinsamen Weg bringen. Hunde haben 4 Pfoten, Menschen 2 Füße, und zusammen gehen sie 1 Weg. Und so war der Name der Hundeschule geboren.<br><br> <strong>Ziemlich simpel.</strong>
+                    </p>
+                </div>
+            </div>
+        </div>
+
         <div  id="overlay" onclick="hidePopup1()"></div>
 
     </div>
@@ -132,13 +146,11 @@
     </body>
     <div class="footer-basic">
         <footer>
-            <div class="social"><a href="https://wa.me/+491783782701"><i class="icon ion-social-whatsapp"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
+            <div class="social"><a href="https://wa.me/+491783782701"><i class="icon ion-social-whatsapp"></i></a>
+                <a href="https://www.facebook.com/Hundeschule421"><i class="icon ion-social-facebook"></i></a></div>
             <ul class="list-inline">
                 <li class="list-inline-item"><a href="tel:+491783782701">Tel:+491783782701</a></li>
-                <li class="list-inline-item"><a href="#">Services</a></li>
-                <li class="list-inline-item"><a href="#">About</a></li>
-                <li class="list-inline-item"><a href="#">Terms</a></li>
-                <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
+                <li class="list-inline-item"><a href="mailto:hundeschule421@t-online.de?subject=Terminanfrage">E-Mail: hundeschule421@t-online.de</a></li>
             </ul>
             <p class="copyright">Paul Panterodt © 2022</p>
         </footer>
