--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
                     <ul class="Navigation">
                         <li id="NavItem">AGB</li>
                         <li id="NavItem">Datenschutz</li>
-                        <li id="NavItem">Kontakt</li>
+                        <li id="NavItem"><a href="contact.html" style="color: black;">Kontakt</a></li>
                         <li id="NavItem">Qualifikationen</li>
-                        <li id="NavItem">Home</li>
+                        <li id="NavItem"><a href="index.html" style="color: black;">Home</a></li>
                     </ul>
                     <img class="topnav" src="Images/burger_menu.png" onclick="dropMenu()">
                     <ul class="Dropdown" id="DropdownMenu">
                         <li id="DropdownItem">AGB</li>
                         <li id="DropdownItem">Datenschutz</li>
-                        <li id="DropdownItem">Kontakt</li>
+                        <li id="DropdownItem"><a href="contact.html" style="color: black;">Kontakt</a>t</li>
                         <li id="DropdownItem">Qualifikationen</li>
-                        <li id="DropdownItem">Home</li>
+                        <li id="DropdownItem"><a href="index.html" style="color: black;">Home</a></li>
                     </ul>
                 </div>
             </td></tr>
