--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                         <li id="NavItem">Qualifikationen</li>
                         <li id="NavItem"><a href="index.html" style="color: black;">Home</a></li>
                     </ul>
-                    <img class="topnav" src="Images/burger_menu.png" onclick="dropMenu()">
+                    <img class="topnav" src="Images/Hamburger_icon.svg" onclick="dropMenu()">
                     <ul class="Dropdown" id="DropdownMenu">
                         <li id="DropdownItem">AGB</li>
                         <li id="DropdownItem">Datenschutz</li>
@@ -47,17 +47,8 @@
 
     <body>
         <div class="Content">
-            <div class="Beitragselement" onclick="showPopup1('popup1')">
-                <img id="Beitrag" src="Images/Titel1_final.jpg" >
-                <h3 id="Beitragstitel">Hundetraining fair und empathisch</h3>
-            </div>
-            <div class="Beitragselement" onclick="showPopup1('popup2')">
-                <img id="Beitrag" src="Images/Titel3_final.png" >
-                <h3 id="Beitragstitel">Wer bin ich?</h3>
-            </div>
-            <div class="Beitragselement" onclick="showPopup1('popup3')">
-                <img id="Beitrag" src="Images/Titel4_final.png" >
-                <h3 id="Beitragstitel">Wie entstand der Name meiner Hundeschule?</h3>
+            <div class="Kontaktdaten">
+                <h3 id="KontaktTitel">Kontaktdaten</h3>
             </div>
         </div>
 
