--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                         <li id="NavItem">Qualifikationen</li>
                         <li id="NavItem"><a href="index.html" style="color: black;">Home</a></li>
                     </ul>
-                    <img class="topnav" src="Images/burger_menu.png" onclick="dropMenu()">
+                    <img class="topnav" src="Images/Hamburger_icon.svg" onclick="dropMenu()">
                     <ul class="Dropdown" id="DropdownMenu">
                         <li id="DropdownItem">AGB</li>
                         <li id="DropdownItem">Datenschutz</li>
-                        <li id="DropdownItem"><a href="contact.html" style="color: black;">Kontakt</a>t</li>
+                        <li id="DropdownItem"><a href="contact.html" style="color: black;">Kontakt</a></li>
                         <li id="DropdownItem">Qualifikationen</li>
                         <li id="DropdownItem"><a href="index.html" style="color: black;">Home</a></li>
                     </ul>
