Contact data and FAQ added

--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,23 @@
     <body>
         <div class="Content">
             <div class="Kontaktdaten">
-                <h3 id="KontaktTitel">Kontaktdaten</h3>
+                <h3 id="KontaktTitel">Kontaktdaten<br><br></h3>
+                <p>Anke Panterodt<br>
+                    Hundeschule 4Pfoten+2Füße=1Weg<br><br>
+                    Klettenberger Hauptstraße 18<br>
+                    99755 Hohenstein
+                </p>
+            </div>
+            <div class="Angebote">
+                <h3>FAQ</h3>
+                <div class="QA">
+                    <p class="Frage">Wann kann ich ein Termin buchen?</p>
+                    <p class="Antwort">Ein Termin kann bei mir jederzeit gebucht werden, dazu Rufen Sie mich einfach unter meiner Nummer an, schreiben mir eine E-Mail oder senden mir eine WhatsApp.</p>
+                </div>
+                <div class="QA">
+                    <p class="Frage">Was sind die Öffnungszeiten?</p>
+                    <p class="Antwort">Da ich eine <u>mobile</u> Hundeschule betreibe, gebe ich keine Öffnungszeiten an. Wenn wir einen Termin vereinbaren, schauen wir einfach, wann es Ihnen am besten passt und wann ich einen Termin frei habe.</p>
+                </div>
             </div>
         </div>
 
