contact scaling and stylesheet changed

--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
                 </p>
             </div>
             <div class="Angebote">
-                <h3>FAQ</h3>
+                <h3 id="FAQ">FAQ</h3>
                 <div class="QA">
                     <p class="Frage">Wann kann ich ein Termin buchen?</p>
                     <p class="Antwort">Ein Termin kann bei mir jederzeit gebucht werden, dazu Rufen Sie mich einfach unter meiner Nummer an, schreiben mir eine E-Mail oder senden mir eine WhatsApp.</p>
