--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <li id="NavItem">AGB</li>
                         <li id="NavItem">Datenschutz</li>
                         <li id="NavItem"><a href="contact.html" style="color: black;">Kontakt</a></li>
-                        <li id="NavItem">Qualifikationen</li>
+                        <li id="NavItem"><a href="qualifikationen.html" style="color: black;">Qualifikationen</a></li>
                         <li id="NavItem"><a href="index.html" style="color: black;">Home</a></li>
                     </ul>
                     <img class="topnav" src="Images/Hamburger_icon.svg" onclick="dropMenu()">
@@ -32,7 +32,7 @@
                         <li id="DropdownItem">AGB</li>
                         <li id="DropdownItem">Datenschutz</li>
                         <li id="DropdownItem"><a href="contact.html" style="color: black;">Kontakt</a></li>
-                        <li id="DropdownItem">Qualifikationen</li>
+                        <li id="DropdownItem"><a href="qualifikationen.html" style="color: black;">Qualifikationen</a></li>
                         <li id="DropdownItem"><a href="index.html" style="color: black;">Home</a></li>
                     </ul>
                 </div>
