--- a/qualifikationen.html
+++ b/qualifikationen.html
@@ -60,13 +60,12 @@
         <section>
           <i class="icon fas fa-home"></i>
           <div class="details">
-            <span class="title">Title of Section 1</span>
-            <span>1st Jan 2021</span>
+            <span class="title">Ausbildung zum Trainer</span>
+            <span>Januar 2017 -  Juni 2018</span>
           </div>
-          <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
+          <p>Ausbildung zum Hundetrainer bei „Animal learn“ in Bernau am Chiemsee mit erfolgreichem Abschluss.</p>
           <div class="bottom">
-            <a href="#">Read more</a>
-            <i>- Someone famous</i>
+            <a href="https://animal-learn.de/">Mehr erfahren</a>
           </div>
         </section>
       </div>
@@ -74,13 +73,12 @@
         <section>
           <i class="icon fas fa-star"></i>
           <div class="details">
-            <span class="title">Title of Section 2</span>
-            <span>2nd Jan 2021</span>
+            <span class="title">Offizielle Erlaubnis</span>
+            <span>Oktober 2018</span>
           </div>
-          <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
+          <p>Erteilung der Erlaubnis gemäß §11 Abs. 1 Nr. 8f des Tierschutzgesetzes</p>
           <div class="bottom">
-            <a href="#">Read more</a>
-            <i>- Someone famous</i>
+            <a href="https://www.gesetze-im-internet.de/tierschg/__11.html">Mehr erfahren</a>
           </div>
         </section>
       </div>
@@ -88,13 +86,12 @@
         <section>
           <i class="icon fas fa-rocket"></i>
           <div class="details">
-            <span class="title">Title of Section 3</span>
-            <span>3rd Jan 2021</span>
+            <span class="title">Hundesymposium</span>
+            <span>November 2018</span>
           </div>
-          <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
+          <p>Teilnahme am Internationalen Hundesymposium in Bernau am Chiemsee </p>
           <div class="bottom">
-            <a href="#">Read more</a>
-            <i>- Someone famous</i>
+            <a href="https://www.polar-chat.de/hunde/calendar/event/143-xvii-internationales-hundesymposium-2018/">Mehr erfahren</a>
           </div>
         </section>
       </div>
@@ -102,13 +99,11 @@
         <section>
           <i class="icon fas fa-globe"></i>
           <div class="details">
-            <span class="title">Title of Section 4</span>
-            <span>4th Jan 2021</span>
+            <span class="title">Seminar</span>
+            <span>November 2018</span>
           </div>
-          <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
+          <p>Seminar „Windhunde aus Spanien – Leben mit Galgo, Podenco, Greyhound und Co.“ in München mit Dr. Karin Dohrmann</p>
           <div class="bottom">
-            <a href="#">Read more</a>
-            <i>- Someone famous</i>
           </div>
         </section>
       </div>
@@ -116,13 +111,11 @@
         <section>
           <i class="icon fas fa-paper-plane"></i>
           <div class="details">
-            <span class="title">Title of Section 5</span>
-            <span>5th Jan 2021</span>
+            <span class="title">Onlinekurs</span>
+            <span>Anfang 2019</span>
           </div>
-          <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
+          <p>Online-Kurs bei „denktier“: Erfolg für Hund und Mensch</p>
           <div class="bottom">
-            <a href="#">Read more</a>
-            <i>- Someone famous</i>
           </div>
         </section>
       </div>
@@ -130,7 +123,7 @@
         <section>
           <i class="icon fas fa-map-marker-alt"></i>
           <div class="details">
-            <span class="title">Title of Section 6</span>
+            <span class="title">Symposium</span>
             <span>6th Jan 2021</span>
           </div>
           <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
