added remaining content for qualifikationen.html

--- a/qualifikationen.html
+++ b/qualifikationen.html
@@ -124,12 +124,97 @@
           <i class="icon fas fa-map-marker-alt"></i>
           <div class="details">
             <span class="title">Symposium</span>
-            <span>6th Jan 2021</span>
+            <span>14. September 2019</span>
           </div>
-          <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
+          <p>Teilnahme am Symposium „15 Jahre Hundepsychologie Thomas Riepe“ in Soest</p>
           <div class="bottom">
-            <a href="#">Read more</a>
-            <i>- Someone famous</i>
+          </div>
+        </section>
+      </div>
+      <div class="row row-1">
+        <section>
+          <i class="icon fas fa-rocket"></i>
+          <div class="details">
+            <span class="title">Fernlehrgang</span>
+            <span>Oktober 2019</span>
+          </div>
+          <p>Fernlehrgang zur Zertifizierten Trainerin SVH (Trainerin für stressbedingte Verhaltensauffälligkeiten beim Hund) mit erfolgreichem Abschluss im Juni 2020</p>
+          <div class="bottom">
+            <a href="https://stresstrainerinnen-svh.com/">Mehr erfahren</a>
+          </div>
+        </section>
+      </div>
+      <div class="row row-2">
+        <section>
+          <i class="icon fas fa-map-marker-alt"></i>
+          <div class="details">
+            <span class="title">Symposium</span>
+            <span>November 2019</span>
+          </div>
+          <p>Teilnahme am Internationalen Hundesymposium in Bernau am Chiemsee</p>
+          <div class="bottom">
+          </div>
+        </section>
+      </div>
+      <div class="row row-1">
+        <section>
+          <i class="icon fas fa-rocket"></i>
+          <div class="details">
+            <span class="title">Stay@Home</span>
+            <span>März/April 2020</span>
+          </div>
+          <p>Teilnahme am Stay@Home Online-Hundekongress</p>
+          <div class="bottom">
+            <a href="https://www.hundekongress.com/stay-home-corona-edition/">Mehr erfahren</a>
+          </div>
+        </section>
+      </div>
+      <div class="row row-2">
+        <section>
+          <i class="icon fas fa-map-marker-alt"></i>
+          <div class="details">
+            <span class="title">Online-Kurs</span>
+            <span>Juni 2020</span>
+          </div>
+          <p>Online-Kurs “ Mensch-Hund-Bindung – sichere Basis ein Leben lang“ mit Mag. Iris Schöberl, PhD</p>
+          <div class="bottom">
+            <a href="https://www.beratungundtraining.at/kalender/mensch-hund-bindung-kurs/">Mehr erfahren</a>
+          </div>
+        </section>
+      </div>
+      <div class="row row-1">
+        <section>
+          <i class="icon fas fa-rocket"></i>
+          <div class="details">
+            <span class="title">Online-Kurs</span>
+            <span>Mitte 2020</span>
+          </div>
+          <p>Online-Kursreihe „Narben auf der Seele – Traumaarbeit mit Hunden“ mit Mag. Iris Schöberl, PhD</p>
+          <div class="bottom">
+          </div>
+        </section>
+      </div>
+      <div class="row row-2">
+        <section>
+          <i class="icon fas fa-map-marker-alt"></i>
+          <div class="details">
+            <span class="title">Seminar</span>
+            <span>Oktober 2020</span>
+          </div>
+          <p>Seminar „Leben und trainieren mit Hibbelhunden“ mit Maria Rehberger</p>
+          <div class="bottom">
+          </div>
+        </section>
+      </div>
+      <div class="row row-1">
+        <section>
+          <i class="icon fas fa-rocket"></i>
+          <div class="details">
+            <span class="title">Symposium</span>
+            <span>November 2020</span>
+          </div>
+          <p>Teilnahme am Internationalen Hundesymposium</p>
+          <div class="bottom">
           </div>
         </section>
       </div>
