--- a/agb.html
+++ b/agb.html
@@ -25,16 +25,16 @@
                 <col style="width: 80%">
                 <tr id="Logodiv"><td><img src="Images/Logo_borderless.png" id="Logo"></td><td><div class="Navigation">
                     <ul class="Navigation">
-                        <li id="NavItem">AGB</li>
-                        <li id="NavItem">Datenschutz</li>
+                        <li id="NavItem"><a href="agb.html" style="color: black;">AGB</a></li>
+                        <li id="NavItem"><a href="datenschutz.html" style="color: black;">Datenschutz</a></li>
                         <li id="NavItem"><a href="contact.html" style="color: black;">Kontakt</a></li>
                         <li id="NavItem"><a href="qualifikationen.html" style="color: black;">Qualifikationen</a></li>
                         <li id="NavItem"><a href="index.html" style="color: black;">Home</a></li>
                     </ul>
                     <img class="topnav" src="Images/Hamburger_icon.svg" onclick="dropMenu()">
                     <ul class="Dropdown" id="DropdownMenu">
-                        <li id="DropdownItem">AGB</li>
-                        <li id="DropdownItem">Datenschutz</li>
+                        <li id="DropdownItem"><a href="agb.html" style="color: black;">AGB</a></li>
+                        <li id="DropdownItem"><a href="datenschutz.html" style="color: black;">Datenschutz</a></li>
                         <li id="DropdownItem"><a href="contact.html" style="color: black;">Kontakt</a></li>
                         <li id="DropdownItem"><a href="qualifikationen.html" style="color: black;">Qualifikationen</a></li>
                         <li id="DropdownItem"><a href="index.html" style="color: black;">Home</a></li>
