--- a/contact.html
+++ b/contact.html
@@ -24,8 +24,8 @@
                 <col style="width: 80%">
                 <tr id="Logodiv"><td><img src="Images/Logo_borderless.png" id="Logo"></td><td><div class="Navigation">
                     <ul class="Navigation">
-                        <li id="NavItem">AGB</li>
-                        <li id="NavItem">Datenschutz</li>
+                        <li id="NavItem"><a href="agb.html" style="color: black;">AGB</a></li>
+                        <li id="NavItem"><a href="datenschutz.html" style="color: black;">Datenschutz</a></li>
                         <li id="NavItem"><a href="contact.html" style="color: black;">Kontakt</a></li>
                         <li id="NavItem"><a href="qualifikationen.html" style="color: black;">Qualifikationen</a></li>
                         <li id="NavItem"><a href="index.html" style="color: black;">Home</a></li>
