--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                     </ul>
                     <img class="topnav" src="Images/Hamburger_icon.svg" onclick="dropMenu()">
                     <ul class="Dropdown" id="DropdownMenu">
-                        <li id="DropdownItem">AGB</li>
-                        <li id="DropdownItem">Datenschutz</li>
+                        <li id="DropdownItem"><a href="agb.html" style="color: black;">AGB</a></li>
+                        <li id="DropdownItem"><a href="datenschutz.html" style="color: black;">Datenschutz</a></li>
                         <li id="DropdownItem"><a href="contact.html" style="color: black;">Kontakt</a></li>
                         <li id="DropdownItem"><a href="qualifikationen.html" style="color: black;">Qualifikationen</a></li>
                         <li id="DropdownItem"><a href="index.html" style="color: black;">Home</a></li>
