--- a/node/test.html
+++ b/node/test.html
@@ -2,5 +2,5 @@
     <title>Hello World</title>
 </head>
 <body>
-    <p>Ich bin ein Test</p>
+    <a href="http://127.0.0.1:1337/users/">Ich bin ein Test</p>
 </body>
