--- a/node/pages/agb.html
+++ b/node/pages/agb.html
@@ -1,8 +1,8 @@
 <head>
     <meta charset="utf-8">
     <title>Hundeschule 421</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="datenschutz.css">
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./datenschutz.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
