--- a/node/pages/qualifikationen.html
+++ b/node/pages/qualifikationen.html
@@ -1,9 +1,9 @@
 <head>
     <meta charset="utf-8">
     <title>Hundeschule 421</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="contact.css">
-    <link rel="stylesheet" href="qualifikationen.css"
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./contact.css">
+    <link rel="stylesheet" href="./qualifikationen.css"
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
